RESOLVED FIXED275876
Video Viewer: Missing PIP when leaving Safari with PIP enabled
https://bugs.webkit.org/show_bug.cgi?id=275876
Summary Video Viewer: Missing PIP when leaving Safari with PIP enabled
Dana Estra
Reported 2024-06-25 15:40:25 PDT
Video Viewer: Missing PIP when leaving Safari with PIP enabled
Attachments
Dana Estra
Comment 1 2024-06-25 15:40:38 PDT
Dana Estra
Comment 2 2024-06-25 15:54:15 PDT
EWS
Comment 3 2024-06-25 20:02:14 PDT
Committed 280360@main (5a4a08911c19): <https://commits.webkit.org/280360@main> Reviewed commits have been landed. Closing PR #30167 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.