Source/WebKit/WebProcess/cocoa/VideoPresentationManager.mm
@@ -116,6 +116,12 @@ void VideoPresentationInterfaceContext::hasVideoChanged(bool hasVideo)
         m_manager->hasVideoChanged(m_contextId, hasVideo);
 }
 
+void VideoPresentationInterfaceContext::documentVisibilityChanged(bool isDocumentVisible)
+{
+    if (RefPtr manager = m_manager.get())
+        manager->documentVisibilityChanged(m_contextId, isDocumentVisible);
+}
+
 void VideoPresentationInterfaceContext::videoDimensionsChanged(const FloatSize& videoDimensions)
 {
     if (m_manager)
@@ -519,6 +525,12 @@ void VideoPresentationManager::hasVideoChanged(PlaybackSessionContextIdentifier 
 {
     if (m_page)
         m_page->send(Messages::VideoPresentationManagerProxy::SetHasVideo(contextId, hasVideo));
+}
+
+void VideoPresentationManager::documentVisibilityChanged(PlaybackSessionContextIdentifier contextId, bool isDocumentVisibile)
+{
+    if (RefPtr page = m_page.get())
+        page->send(Messages::VideoPresentationManagerProxy::SetDocumentVisibility(contextId, isDocumentVisibile));
 }
 
 void VideoPresentationManager::videoDimensionsChanged(PlaybackSessionContextIdentifier contextId, const FloatSize& videoDimensions)
